# wasm-benchmark

./: CMakeLists.include  d8_wrapper.js  runner.py  wrapper.html  wrapper.js
benchmarks/base64/: CMakeLists.txt  base64_bench.cpp  config.yaml
benchmarks/box2d/: CMakeLists.txt  box2d_bench.cpp  config.yaml
benchmarks/bullet/: CMakeLists.txt  config.yaml
benchmarks/coremark/: CMakeLists.txt  config.yaml
benchmarks/lzma/: CMakeLists.txt  config.yaml  lzma_bench.c
benchmarks/micro/: CMakeLists.txt  config.yaml  string_bench.cpp
benchmarks/sqlite/: CMakeLists.txt  config.yaml
benchmarks/zlib/: CMakeLists.txt  config.yaml  zlib_bench.c
browser_support/: package.json  run.js
puppeteer/: package.json  run.js
tools/: CMakeLists.txt  library.js
tools/include/: wasm_perf.h
tools/src/: benchmark.cc  benchmark.h  native_recorder.cc  pipe_out.cc  time-keeper.h  wasm_recorder.cc
